--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "rs-loader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.coffee",
   "scripts": {
+    "start": "coffee app.coffee",
     "update": "coffee update.coffee"
   },
   "dependencies": {
     "coffee-script": "^1.8.0",
+    "express": "^4.9.8",
     "mongoose": "^3.8.17",
     "mongoose-find-one-or-create": "^0.2.0",
     "q": "^1.0.1",
